[gd_scene load_steps=8 format=4 uid="uid://dw7agiaxfbeun"]

[ext_resource type="Script" path="res://scene/flying_pojectile.gd" id="1_ch0mv"]

[sub_resource type="SphereMesh" id="SphereMesh_iw42c"]
radius = 0.4
height = 0.5

[sub_resource type="SphereShape3D" id="SphereShape3D_us5y8"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ha6pn"]
resource_name = "Head"
albedo_color = Color(0.906332, 0.548906, 0.311243, 1)
metallic = 0.4
roughness = 0.272166

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_t5pyb"]
resource_name = "Body"
albedo_color = Color(0.906332, 0.806644, 0.671695, 1)
metallic = 0.4
roughness = 0.272166

[sub_resource type="ArrayMesh" id="ArrayMesh_5pbfp"]
_surfaces = [{
"aabb": AABB(-9.62074e-05, -9.46234e-05, 7.66895e-05, 0.000192415, 0.000191361, 0.000103072),
"format": 34896613377,
"index_count": 798,
"index_data": PackedByteArray("AAACAAEAAAACAAEAAQADAAAAAQADAAAABAAAAAMABAAAAAMAAwAFAAQAAwAFAAQABAAFAAYABAAFAAYABgAHAAQABgAHAAQABwAGAAgABwAGAAgACAAJAAcACAAJAAcACgAJAAgACgAJAAgACAALAAoACAALAAoADAAKAAsADAAKAAsACwANAAwACwANAAwADAANAA4ADAANAA4ADgAPAAwADgAPAAwAEAAPAA4AEAAPAA4ADgARABAADgARABAAEgAQABEAEgAQABEAEQATABIAEQATABIAEgATABQAEgATABQAFAAVABIAFAAVABIAFQAUABYAFQAUABYAFgAXABUAFgAXABUAGAAXABYAGAAXABYAFgAZABgAFgAZABgAGgAYABkAGgAYABkAGQAbABoAGQAbABoAGgAbABwAGgAbABwAHAAdABoAHAAdABoAHQAcAAEAHQAcAAEAAQACAB0AAQACAB0AHgAgAB8AHgAgAB8AHwAhAB4AHwAhAB4AIgAhAB8AIgAfACMAIgAfACMAIgAhAB8AJAAiACMAJAAiACMAIwAlACQAIwAlACQAJgAnACQAJgAnACQAJAAlACYAJAAlACYAJwAmACgAJwAmACgAKAApACcAKAApACcAKAAqACkAKAAqACkAKgAoACsAKgAoACsAKgArACwAKgArACwALAAtACoALAAtACoALgAtACwALgAtACwALAAvAC4ALAAvAC4ALwAxADAALwAxADAAMAAuAC8AMAAuAC8AMAAxADIAMAAxADIAMgAzADAAMgAzADAAMgA0ADMAMgA0ADMANAAyADUANAAyADUANgA1ADcANgA0ADUANgA1ADcANgA0ADUANgA3ADgANgA3ADgAOAA5ADYAOAA5ADYAOgA7ADkAOgA7ADkAOQA4ADoAOQA4ADoAOgAeADsAOgAeADsAIAAeADoAIAAeADoAAQAcAB8AAQAcAB8AHwAgAAEAHwAgAAEAHAAbACMAHAAbACMAIwAfABwAIwAfABwAIwAbABkAIwAbABkAGQAlACMAGQAlACMAFgAmACUAFgAmACUAJQAZABYAJQAZABYAFgAUACgAFgAUACgAKAAmABYAKAAmABYAFAATACsAFAATACsAKwAoABQAKwAoABQAKwATABEAKwATABEAEQAsACsAEQAsACsAEQAOAC8AEQAOAC8ALwAsABEALwAsABEADgANADEADgANADEAMQAvAA4AMQAvAA4AMQANAAsAMQANAAsACwAyADEACwAyADEAMgALAAgAMgALAAgACAA1ADIACAA1ADIACAAGADcACAAGADcANwA1AAgANwA1AAgABgAFADgABgAFADgAOAA3AAYAOAA3AAYAOAAFAAMAOAAFAAMAAwA6ADgAAwA6ADgAOgADAAEAOgADAAEAAQAgADoAAQAgADoAPAA7AB4APAA7AB4AHgA9ADwAHgA9ADwAOQA7ADwAOQA7ADwAPAA+ADkAPAA+ADkAPwBBAEAAPwBBAEAAQgBDAD4AQgBDAD4AQABEAD8AQABBAD0AQABBAD0AQABEAD8APQBFAEAAPQBFAEAARgBCAD4ARgA9AEEARgA+AD0ARgBCAD4ARgA9AEEARgA+AD0AQQBIAEcAQQBIAEcAQQBHAEkAQQBJAEYAQQBJAEYAQQBHAEkAPgA8AD0APgA8AD0AQwBKAD4AQwBKAD4APgBKADYAPgBKADYANgA5AD4ANgA5AD4AQwA0ADYAQwA0ADYANgBKAEMANgBKAEMAQgAzADQAQgAzADQANABDAEIANABDAEIAMABCAEYAMABCAEYAQgAwADMAQgAwADMALgAwAEYALgAwAEYARgBJAC4ARgBJAC4ASQBHAC0ASQBHAC0ALQAuAEkALQAuAEkASAAqAC0ASAAqAC0ALQBHAEgALQBHAEgAKQBIAEEAKQBIAEEASAApACoASAApACoAPwAnACkAPwAnACkAKQBBAD8AKQBBAD8AJAAnAD8AJAAnAD8APwBEACQAPwBEACQAQAAiACQAQAAiACQAJABEAEAAJABEAEAARQAhACIARQAhACIAIgBAAEUAIgBAAEUAHgBFAD0AHgBFAD0ARQAeACEARQAeACEA"),
"lods": [1.13594e-05, PackedByteArray("AAAHAAQAAAAHAAQAOAAHAAAAAAA6ADgAAgAgADoAOAAHAAAACwAHADgACwAHADgAOAAyAAsAOAAyAAsAAAA6ADgAOgAAAAIAOgAAAAIAHwAgAAIAAgAgADoACwAJAAcACwAJAAcAHwAgAAIAAgAdAB8AAgAdAB8AHgAgAB8AHgAgAB8AIAAeADoAIAAeADoAHwAdABkAHwAdABkAGQAdABoAGQAdABoAGgAYABkAGgAYABkAGAAXABkAGAAXABkAOgAeADsAOgAeADsAOwA4ADoAOwA4ADoAOAA7ADYAOAA7ADYANgAyADgANgAyADgANgA7AD4APgA7AB4ANgA7AD4APgA7AB4AMgA2ADAAPgAwADYAMgA2ADAAPgAwADYALAAyADAALAAyADAAKgAwAD4AMAAqACwAKgAwAD4AMAAqACwAHgBFAD4AHgBFAD4ARQAqAD4ARQAqAD4ARQAeACcARQAeACcAJwAqAEUAJwAqAEUAJwAeAB8AJwAeAB8AJgAqACcAJgAqACcAHwAmACcAHwAmACcAKgAmACwAKgAmACwAGQAmAB8AGQAmAB8AGQAVACYAGQAVACYAGQAXABUAGQAXABUALAAmABUALAAmABUADgAVABIADgAVABIAEgAQAA4AEgAQAA4AMgAsAA4AMgAsAA4AMgAOAAsAMgAOAAsACwAOAAwACwAOAAwALAAVAA4ALAAVAA4AEAAPAA4AEAAPAA4ADgAPAAwADgAPAAwADAAKAAsADAAKAAsACgAJAAsACgAJAAsA"), 4.49814e-05, PackedByteArray("AAAHAAQAAAAHAAQAOgAHAAAAOgAHAAAACgAHADoACgAHADoACgAJAAcACgAJAAcAOgAAAAIAOgAAAAIAAgAdADoAAgAdADoAOgAdABgAOgAdABgAGAAdABoAGAAdABoAGAAsADoAGAAsADoAGAAXABUAGAAXABUAGAAVACwAGAAVACwADwAVABIADwAVABIAEgAQAA8AEgAQAA8AMgAsAA8AMgAsAA8AMgAPAAoAMgAPAAoACgAPAAwACgAPAAwAOgAyAAoAOgAyAAoAOgAsACcAOgAsACcALAAVAA8ALAAVAA8AJwA2AD4AJwA2AD4ALAAyADYALAAyADYANgAnACwANgAnACwANgAyADoANgAyADoAJwA+ADoAJwA+ADoAOgA+ADYAOgA+ADYA"), 0.000108482, PackedByteArray("AAAHAAQAAAAHAAQABwAAAAIABwAAAAIAHQAHAAIAHQAHAAIADwAHAB0ADwAHAB0ADwAdABUADwAdABUAGAAVAB0AGAAVAB0AGAAdABoAGAAdABoAGAAXABUAGAAXABUADwAVABIADwAVABIAEgAQAA8AEgAQAA8ACgAPAAwACgAPAAwACgAJAAcACgAJAAcABwAPAAoABwAPAAoA")],
"name": "Head",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 75,
"vertex_data": PackedByteArray("FE5S7wAAAAD/f///IB0AAP9//fkAAAAApkvO9CAdAADKJCjRAAAAAFogLdUgHQAAmAWTpiAdAABGC7ikAAAAAAAADnEgHQAA8AWvcQAAAAC1FeFAAAAAAIkQ4D0gHQAA2ze+GgAAAABZNOMVIB0AAD1lAAAgHQAAe2bfBQAAAACDmd8FAAAAAMGaAAAgHQAAI8i+GgAAAACly+MVIB0AAHXv4D0gHQAASerhQAAAAAD//w5xIB0AAA76r3EAAAAAuPS4pAAAAABm+pOmIB0AADTbKNEAAAAApN8t1SAdAABYtM70IB0AAOqxUu8AAAAA/3+tpQrxAACAqVDcw6gAAP9/L+XDqAAAz49MogrxAADknL6YCvEAANPLPMPDqAAA+aSqigrxAAAK4Uqew6gAAHrl3HPDqAAAqqZ/egrxAABd2EhLw6gAAKuhCWsK8QAA2Zb0XgrxAAD5u5Qrw6gAADaVORrDqAAAFIhYWArxAADqd1hYCvEAAMhqORrDqAAAJWn0XgrxAAAFRJQrw6gAAKEnSEvDqAAAU14JawrxAABUWX96CvEAAIQa3HPDqAAABVuqigrxAAD0Hkqew6gAACs0PMPDqAAAGmO+mArxAAB+VlDcw6gAAC9wTKIK8QAAC31Ahf//AAD/f+GF//8AAJp6d4P+/wAAN4fSff//AABkhXeD/v8AAEiG73r//wAAtnnvev//AADHeNJ9//8AAOaG1oD+/wAA84JAhf//AAC7e654/v8AAIGBcnf+/wAAQ4SueP//AAB9fnJ3/v8AABh51oD+/wAA")
}, {
"aabb": AABB(-9.94522e-05, -9.78148e-05, -0.0002, 0.000198904, 0.000197815, 0.00027669),
"format": 34896613377,
"index_count": 399,
"index_data": PackedByteArray("AAACAAEAAQADAAAABAAAAAMAAwAFAAQABgAEAAUABQAHAAYACAAGAAcABwAJAAgACgAIAAkACQALAAoADAAKAAsACwANAAwADgAMAA0ADQAPAA4AEAAOAA8ADwARABAAEgAQABEAEQATABIAFAASABMAEwAVABQAFgAUABUAFQAXABYAGAAWABcAFwAZABgAGgAYABkAGQAbABoAHAAaABsAGwAdABwAAgAcAB0AHQABAAIAHQAfAB4AHgABAB0AHwAdABsAGwAgAB8AIQAgABsAGwAZACEAGQAXACIAIgAhABkAFQAjACIAIgAXABUAEwAkACMAIwAVABMAJAATABEAEQAlACQAEQAPACYAJgAlABEADwANACcAJwAmAA8ACwAoAA0AJwANACgACQApAAsAKAALACkAKQAJAAcABwAqACkABQArACoAKgAHAAUABQADACwALAArAAUAAQAeAAMALAADAB4ALQAcAAIAAgAuAC0ALwAaABwAHAAtAC8ALwAwABgAGAAaAC8AMAAxABYAFgAYADAAMgAUABYAFgAxADIAFAAyADMAMwASABQAMwA0ABAAEAASADMANAA1AA4ADgAQADQANgAMAA4ADgA1ADYANgA3AAoACgAMADYANwA4AAgACAAKADcAOQAGAAgACAA4ADkAOgAEAAYABgA5ADoAOgA7AAAAAAAEADoAOwAuAAIAAgAAADsAPAA9AC0ALQAuADwAPQA+AC8ALwAtAD0ALwA+AD8APwAwAC8AQAAxADAAMAA/AEAAQABBADIAMgAxAEAAQQBCADMAMwAyAEEAMwBCAEMAQwA0ADMAQwBEADUANQA0AEMARABFADYANgA1AEQANgBFAEYARgA3ADYANwBGAEcARwA4ADcARwBIADkAOQA4AEcASABJADoAOgA5AEgAOgBJAEoASgA7ADoAOwBKADwAPAAuADsASQBIAEcARwBGAEkARABDAEIAQAA/AD4APgBBAEAAQQA+AD0AQgBBAD0APQA8AEoASgBJAEYASgBGAEUARQBEAEIARQBCAD0ARQA9AEoA"),
"name": "Body",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 75,
"vertex_data": PackedByteArray("pkvO9HUZAAD/f///oP8AAP9///91GQAApkvO9KD/AABaIC3VdRkAAFogLdWg/wAAmAWTpnUZAACYBZOmoP8AAAAADnF1GQAAAAAOcaD/AACJEOA9dRkAAIkQ4D2g/wAAWTTjFXUZAABZNOMVoP8AAD1lAAB1GQAAPWUAAKD/AADBmgAAdRkAAMGaAACg/wAApcvjFXUZAACly+MVoP8AAHXv4D11GQAAde/gPaD/AAD//w5xdRkAAP//DnGg/wAAZvqTpnUZAABm+pOmoP8AAKTfLdV1GQAApN8t1aD/AABYtM70dRkAAFi0zvSg/wAA/3/29f//AABJsKTr//8AADrYd87//wAA6fB5o///AAAT9hpy//8AANHm5EL//wAAyMUAHv//AACumM8J//8AAFBnzwn//wAANjoAHv//AAAtGeRC//8AAOwJGnL//wAAFQ95o///AADEJ3fO//8AALVPpOv//wAAKLBZ6xkLAAD/f6T1GQsAAP3XQM4ZCwAAnPBgoxkLAADB9SNyGQsAAIrmDUMZCwAAmMVDHhkLAACdmCAKGQsAAGFnIAoZCwAAZjpDHhkLAAB0GQ1DGQsAAD0KI3IZCwAAYg9goxkLAAABKEDOGQsAANZPWesZCwAA/3///wAAAABYtM70AAAAAKTfLdUAAAAAZvqTpgAAAAD//w5xAAAAAHXv4D0AAAAApcvjFQAAAADBmgAAAAAAAD1lAAAAAAAAWTTjFQAAAACJEOA9AAAAAAAADnEAAAAAmAWTpgAAAABaIC3VAAAAAKZLzvQAAAAA")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_avaax"]
resource_name = "Root Scene_Cylinder"
_surfaces = [{
"aabb": AABB(-9.62074e-05, -9.46234e-05, 7.66895e-05, 0.000192415, 0.000191361, 0.000103072),
"attribute_data": PackedByteArray("if61mkXbrcHS6I3LJO4wl4n+PmUk7jCXif61mh7usWiJ/j5lMdsyPh7usWjM6F00zOhdNJm4DR8x2zI+BsGGEBOOBgCZuA0fBsGGEEyMuRDaWK8FTIy5EBOOBgAFXqgV2livBcE1+SwFXqgViip8ICALykvBNfksiip8IHIapFIGACKAchqkUiALykvQECqABgAigIYar63QECqAKwt9tCsLfbTsNVXThhqvrawqzd8YWXz67DVV06wqzd9KXoXqUI74/0peheoYWXz6kYxI71CO+P/EuNXgkYxI7yPBXe8jwV3vRdutwcS41eDS6I3LbJPUjqeid72yuFqqyosplT6C2Jenone9yosplb2G+MVueGmWvYb4xT6C2JfGaWPCxFBUs254aZYNcByRxmljwg1wHJENQGObxFBUs41q24gNQGObjWrbiOJoE3+HOrh+4mgTfyRBSGKHOrh+V2t3dX1xr20kQUhiV2t3db5S/0q+Uv9KRnoTaUts4Tx9ca9tRnoTaWKJXzpLbOE8LIRwaGKJXzoshHBoeI3ia/ik6kOQlNBySLrdV/ik6kN4jeJrkJTQcqLFwXJIut1XOZgHfBLF7o85mAd80pfwhaLFwXISxe6P0pfwhWyT1I6yuFqqRdutwaeid73EuNXgsrhaqsS41eC9hvjFkYxI76eid729hvjFSl6F6pGMSO/GaWPC7DVV08ZpY8LEUFSzSl6F6uw1VdMNQGObhhqvrcRQVLOGGq+thzq4ftAQKoANQGObhzq4fnIapFLQECqAJEFIYnIapFK+Uv9KwTX5LCRBSGLBNfksS2zhPAVeqBW+Uv9KS2zhPEyMuRAFXqgVYolfOmKJXzqZuA0fTIy5EPik6kOZuA0fSLrdVzHbMj74pOpDMdsyPqLFwXIe7rFoSLrdV6LFwXIk7jCXHu6xaBLF7o8Sxe6PRdutwSTuMJeyuFqq7IQjgWyT1I7Sl/CFHITBgjmYB3zshCOB0pfwhQKFVX+ofSOD94BihKp8oIFfgb17AoVVfxCDYXwufx2EHITBgrWC54ORf9h71XwXfl9813/2fa187IQjgVmEpn0ChVV/kJTQclmEpn05mAd8EINhfJCU0HJ4jeJrWYSmfV+BvXt4jeJrLIRwaBCDYXxGehNpkX/Ye1+BvXsshHBofXGvbZF/2HtGehNp9n2tfPZ9rXxXa3d11XwXfn1xr21ffNd/V2t3deJoE3/VfBd+jWrbiKp8oIFffNd/4mgTf6h9I4ONatuIDXAckap8oIFueGmWqH0jgw1wHJEufx2E94BihG54aZY+gtiXLn8dhLWC54M+gtiXyosplfeAYoRsk9SOHITBgrWC54PKiymVif61mtLojcuJ/j5lzOhdNMzoXTQGwYYQE44GANpYrwWKKnwgiip8IIoqfCAgC8pLBgAigCsLfbQrC320rCrN3xhZfPpQjvj/I8Fd7yPBXe+J/rWa0uiNy4n+PmXM6F00BsGGEBOOBgDaWK8Fiip8ICALyksGACKAKwt9tKwqzd8YWXz6UI74/yPBXe8NcByRJEFIYiRBSGIkQUhiJEFIYmKJXzqQlNByEsXujxLF7o8Sxe6Pif61mtLojcuJ/j5lzOhdNMzoXTQGwYYQTIy5EME1+SzBNfksBgAigCsLfbSsKs3fSl6F6iPBXe+none9p6J3vcRQVLMkQUhiYolfOqLFwXISxe6P"),
"format": 34896613399,
"index_count": 798,
"index_data": PackedByteArray("AAACAAEAAAACAAEAAQADAAAAAQADAAAABAAGAAUABAAGAAUABQAHAAQABQAHAAQACAAKAAkACAAKAAkACQALAAgACQALAAgADAAOAA0ADAAOAA0ADQAPAAwADQAPAAwAEAASABEAEAASABEAEQATABAAEQATABAAFAAWABUAFAAWABUAFQAXABQAFQAXABQAGAAaABkAGAAaABkAGQAbABgAGQAbABgAHAAeAB0AHAAeAB0AHQAfABwAHQAfABwAIAAiACEAIAAiACEAIQAjACAAIQAjACAAJAAmACUAJAAmACUAJQAnACQAJQAnACQAKAAqACkAKAAqACkAKQArACgAKQArACgALAAuAC0ALAAuAC0ALQAvACwALQAvACwAMAAyADEAMAAyADEAMQAzADAAMQAzADAANAA2ADUANAA2ADUANQA3ADQANQA3ADQAOAA6ADkAOAA6ADkAOQA7ADgAOQA7ADgAPAA+AD0APAA+AD0APQA/ADwAPQA/ADwAQABCAEEAQABBAEMAQABBAEMAQABCAEEARABGAEUARABGAEUARQBHAEQARQBHAEQASABKAEkASABKAEkASQBLAEgASQBLAEgATABOAE0ATABOAE0ATQBPAEwATQBPAEwAUABSAFEAUABSAFEAUgBQAFMAUgBQAFMAVABWAFUAVABWAFUAVQBXAFQAVQBXAFQAWABaAFkAWABaAFkAWQBbAFgAWQBbAFgAXABeAF0AXABeAF0AXQBfAFwAXQBfAFwAYABiAGEAYABiAGEAYQBjAGAAYQBjAGAAZABmAGUAZABmAGUAZgBkAGcAZgBkAGcAaABqAGkAaABrAGoAaABqAGkAaABrAGoAbABuAG0AbABuAG0AbQBvAGwAbQBvAGwAcAByAHEAcAByAHEAcQBzAHAAcQBzAHAAdAB2AHUAdAB2AHUAdwB2AHQAdwB2AHQAeAB6AHkAeAB6AHkAeQB7AHgAeQB7AHgAfAB+AH0AfAB+AH0AfQB/AHwAfQB/AHwAgACCAIEAgACCAIEAgQCDAIAAgQCDAIAAhACGAIUAhACGAIUAhQCHAIQAhQCHAIQAiACKAIkAiACKAIkAiQCLAIgAiQCLAIgAjACOAI0AjACOAI0AjQCPAIwAjQCPAIwAkACSAJEAkACSAJEAkQCTAJAAkQCTAJAAlACWAJUAlACWAJUAlQCXAJQAlQCXAJQAmACaAJkAmACaAJkAmQCbAJgAmQCbAJgAnACeAJ0AnACeAJ0AnQCfAJwAnQCfAJwAoACiAKEAoACiAKEAoQCjAKAAoQCjAKAApACmAKUApACmAKUApQCnAKQApQCnAKQAqACqAKkAqACqAKkAqQCrAKgAqQCrAKgArACuAK0ArACuAK0ArQCvAKwArQCvAKwAsACyALEAsACyALEAsQCzALAAsQCzALAAtAC2ALUAtAC2ALUAtQC3ALQAtQC3ALQAuAC6ALkAuAC6ALkAuQC7ALgAuQC7ALgAvAC+AL0AvAC+AL0AvwDBAMAAvwDBAMAAvQDCALwAvQC+AMMAvQC+AMMAvQDCALwAwwDEAL0AwwDEAL0AxQC/AMAAxQDDAL4AxQDAAMMAxQC/AMAAxQDDAL4AxQDAAMMAvgDHAMYAvgDHAMYAvgDGAMgAvgDIAMUAvgDIAMUAvgDGAMgAwADJAMMAwADJAMMAwQDKAMAAwQDKAMAAywDNAMwAywDNAMwAzADOAMsAzADOAMsAzwDRANAAzwDRANAA0ADSAM8A0ADSAM8A0wDVANQA0wDVANQA1ADWANMA1ADWANMA1wDZANgA1wDZANgA2QDXANoA2QDXANoA2wDdANwA2wDdANwA3ADeANsA3ADeANsA3wDhAOAA3wDhAOAA4ADiAN8A4ADiAN8A4wDlAOQA4wDlAOQA5ADmAOMA5ADmAOMA5wDpAOgA5wDpAOgA6QDnAOoA6QDnAOoA6wDtAOwA6wDtAOwA7ADuAOsA7ADuAOsA7wDxAPAA7wDxAPAA8ADyAO8A8ADyAO8A8wD1APQA8wD1APQA9AD2APMA9AD2APMA9wD5APgA9wD5APgA+AD6APcA+AD6APcA+wD9APwA+wD9APwA/QD7AP4A/QD7AP4A"),
"lods": [1.13594e-05, PackedByteArray("LAEvAS4BLAEvAS4BbQAvASwBLAFwAG0AAgA+AHAAPwEvASwBMgEvAT8BMgEvAT8BPwFhADIBPwFhADIBLAFAAT8BQAEsAS0BQAEsAS0BPQA+AC0BLQE+AEABMgExATABMgExATABOgE+AC0BLQE5ATsBLQE5ATsBPAA+ADoBPAA+ADoBPgA8AEABPgA8AEABOgE5ATgBOgE5ATgBOAE5ATAAOAE5ATAAMAAsAC8AMAAsAC8ALAArAC8ALAArAC8AQAE8AHIAQAE8AHIAcgA/AUABcgA/AUABPwFyAGgAPwFyAGgAaAA+AT8BaAA+AT8BaAByALsAuwByADwAaAByALsAuwByADwAPgFoAF0AuwBdAGgAPgFoAF0AuwBdAGgAVQA+AV0AVQA+AV0AUgBdALsAXQBSAFUAUgBdALsAXQBSAFUAPADEALsAPADEALsAxABSALsAxABSALsAxAA8AEoAxAA8AEoASgBSAMQASgBSAMQASgA8ADoBSgA8ADoBPAFSAEoAPAFSAEoAOgE8AUoAOgE8AUoAUgA8AVUAUgA8AVUAOAE8AToBOAE8AToBOAE2ATwBOAE2ATwBOAE3ATYBOAE3ATYBPQE8ATYBPQE8ATYBNAE2ATUBMwE2ATUBNQEcADMBNQEcADMBPgFVADMBPgFVADMBPgEzATIBPgEzATIBMgEzARQAMgEzARQAVQAnABkAVQAnABkAHAAbABkAHAAbABkAGQAbABQAGQAbABQAFAAQABMAFAAQABMAEAAPABMAEAAPABMA"), 4.49814e-05, PackedByteArray("EwEWARUBEwEWARUBKwEWARMBKwEWARMBGAEWASsBGAEWASsBGAEXARYBGAEXARYBKgETARQBKgETARQBFAEhASoBFAEhASoBKgEhAR8BKgEhAR8BHwEhASABHwEhASABHwEkASkBHwEjASkBHwEeAR0BHwEeAR0BHwEdASUBHwEdASUBGgEdARwBGgEdARwBHAEbARoBHAEbARoBJwEmARoBJwEmARoBJwEaARgBJwEaARgBGAEaARkBGAEaARkBcABhABgBcABhABAAcABVAEoAcABVAEoAVQAnABsAVQAnABsASgBoALsASgBoALsAIwFhACgBIwFhACgBKAEiASMBKAEiASMBKAFhACkBKAFhACkBIgG7ACkBIgG7ACkBKQG7ACgBKQG7ACgB"), 0.000108482, PackedByteArray("/wACAQEB/wACAQEBAgH/AAABAgH/AAABEQEDAQABEQEDAQABCAEDARIBCAEDARIBCAESAQwBCAESAQwBDwENAREBDwEMAREBDwERARABDwERARABDwEOAQwBDwEOAQwBBwEMAQsBBwEMAQsBCwEKAQcBCwEKAQcBBQEHAQYBBQEHAQYBBQEEAQIBBQEEAQIBAgEJAQUBAgEJAQUB")],
"material": SubResource("StandardMaterial3D_ha6pn"),
"name": "Head",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 321,
"vertex_data": PackedByteArray("FE5S7wAAdOf/f///IB3l7P9//fkAAMLupkvO9CAd3uXKJCjRAACA5qZLzvQgHQbuFE5S7wAAkvBaIC3VIB1i5MokKNEAABXumAWTpiAdjOhaIC3VIB3M70YLuKQAAMXmRgu4pAAAzOsAAA5xIB2h6ZgFk6YgHXns8AWvcQAA5+i1FeFAAADe6QAADnEgHUXr8AWvcQAAwOuJEOA9IB1w6ds3vhoAAMzqiRDgPSAdoeq1FeFAAACT6lk04xUgHdnq2ze+GgAAI+w9ZQAAIB0+6Vk04xUgHQrte2bfBQAASOiDmd8FAACA6D1lAAAgHU7se2bfBQAAnO3BmgAAIB1d5yPIvhoAAL3mwZoAACAdfu2Dmd8FAADK76XL4xUgHdHkI8i+GgAA1e517+A9IB3656XL4xUgHfHwSerhQAAA0uVJ6uFAAADx7P//DnEgHRfpde/gPSAdJe4O+q9xAADT57j0uKQAADHp//8OcSAdF+wO+q9xAAAW7Wb6k6YgHVHoNNso0QAAaupm+pOmIB286rj0uKQAANfqpN8t1SAdUeo02yjRAABw61i0zvQgHQjqpN8t1SAd3+vqsVLvAACP6eqxUu8AAOHs/3///yAdVehYtM70IB1L7v9//fkAANvm/3+tpQrxAtyAqVDcw6gP2v9/L+XDqIbZz49MogrxLt3knL6YCvEN3ICpUNzDqBXbz49MogrxotzTyzzDw6jR2vmkqooK8Zfc08s8w8OoctzknL6YCvGu3ArhSp7DqGfceuXcc8OoUt35pKqKCvHE3Kqmf3oK8XDcCuFKnsOoeN2qpn96CvGx3F3YSEvDqBHdeuXcc8OoLN2roQlrCvF33F3YSEvDqFLcq6EJawrxL9rZlvReCvH82vm7lCvDqLDc2Zb0XgrxJdw2lTkaw6is2vm7lCvDqETaFIhYWArxCd3qd1hYCvHg2jaVORrDqFPaFIhYWArxNdvIajkaw6gt2shqORrDqJbaJWn0XgrxptsFRJQrw6hL2up3WFgK8UncJWn0Xgrxa9yhJ0hLw6i/2wVElCvDqJDbU14Jawrx0tyhJ0hLw6gP3VNeCWsK8WLcVFl/egrxo9yEGtxzw6gs3QVbqooK8TXc9B5KnsOo592EGtxzw6iJ3VRZf3oK8WjbBVuqigrxltwrNDzDw6iW3PQeSp7DqJfcGmO+mArxldx+VlDcw6hJ2xpjvpgK8UncL3BMogrx49wrNDzDw6gD235WUNzDqJjaL3BMogrxr9r/f62lCvGm2v9/L+XDqJTa/3///yAdEdqAqVDcw6g92li0zvQgHeXZ/38v5cOoctpYtM70IB1G3NPLPMPDqBPdpN8t1SAddduAqVDcw6gM3tPLPMPDqBDjZvqTpiAdJOOk3y3VIB044wrhSp7DqPji//8OcSAdhecK4Uqew6gN53rl3HPDqHzmZvqTpiAdAOj//w5xIB0j513YSEvDqDDlde/gPSAdIel65dxzw6jZ4nXv4D0gHR/j+buUK8OoZeGly+MVIB3j5F3YSEvDqFLf+buUK8Ooa9/BmgAAIB263aXL4xUgHQTcNpU5GsOoeOHBmgAAIB3J2shqORrDqHraPWUAACAdGts2lTkaw6ga2j1lAAAgHX3aBUSUK8OoFttZNOMVIB3g2chqORrDqNDbBUSUK8OoBuCJEOA9IB1Z31k04xUgHajeoSdIS8Oo2OChJ0hLw6ii5QAADnEgHR3miRDgPSAdnOaEGtxzw6gM5QAADnEgHSzo9B5KnsOoVOaYBZOmIB0P6oQa3HPDqB3kmAWTpiAdXeUrNDzDw6h541ogLdUgHUzn9B5KnsOoNOErNDzDw6h04aZLzvQgHRXgWiAt1SAdsN5+VlDcw6gf435WUNzDqJjd/3///yAdqNumS870IB2y2f9/L+XDqPXfC31Ahf//itv/f62lCvEY2y9wTKIK8Q3b/3/hhf//utsaY76YCvF/2wt9QIX//1XbL3BMogrxg9uaeneD/v9C2zeH0n3//3jbZIV3g/7/ddtIhu96//9127Z573r//3nbmnp3g/7/edvHeNJ9//+E2+aG1oD+/3zb/3/hhf//d9vzgkCF//9827t7rnj+/3bbgYFyd/7/adtDhK54//99231+cnf+/3PbC31Ahf//etsYedaA/v9r25p6d4P+/43bBVuqigrx5NsYedaA/v9o2xpjvpgK8e3bx3jSff//39sFW6qKCvEM3FRZf3oK8RDcGHnWgP7/zdu2ee96///b21RZf3oK8ejbU14Jawrx6dvHeNJ9///W2yVp9F4K8YHbu3uueP7/xNu2ee96//+w21NeCWsK8X3b6ndYWArxI9u7e654/v9y2yVp9F4K8RvbfX5yd/7/lNt9fnJ3/v9D2xSIWFgK8Q7bgYFyd/7/Wtvqd1hYCvEJ20OErnj//5jbFIhYWArxP9vZlvReCvE224GBcnf+/73bq6EJawrxtdtIhu96//9Q20OErnj//27b2Zb0XgrxvNs3h9J9///c26uhCWsK8f3bqqZ/egrxANxIhu96///O2/mkqooK8QbcN4fSff//0Nuqpn96CvEM3OaG1oD+/7nbZIV3g/7/x9v5pKqKCvG32+ScvpgK8bbb5obWgP7/ztvzgkCF//+c2+ScvpgK8Urbz49MogrxQttkhXeD/v+/2/9/raUK8Q3b/3/hhf//cdvzgkCF//9T28+PTKIK8QbbFE5S7wAA7uL/f/35AAD748okKNEAADbVRgu4pAAAvcxGC7ikAACJr/AFr3EAAOrStRXhQAAAWNjbN74aAADO43tm3wUAALLqe2bfBQAAX+x7Zt8FAADv4IOZ3wUAAEXkI8i+GgAAI9NJ6uFAAADqyEnq4UAAAE7PDvqvcQAAs9C49LikAAAl0zTbKNEAAHje6rFS7wAAPOXqsVLvAADZ6BROUu8AAK7i/3/9+QAAYOHKJCjRAABq00YLuKQAAJ3Q8AWvcQAABNO1FeFAAAAq2ts3vhoAAH3je2bfBQAAa+eDmd8FAAC14iPIvhoAAEfTSerhQAAAotAO+q9xAADu0bj0uKQAAL3SNNso0QAAdt7qsVLvAAD65qqmf3oK8fPXNpU5GsOoytc2lTkaw6iq3zaVORrDqOLtNpU5GsOor9qhJ0hLw6i04QVbqooK8UbZflZQ3MOo9Nd+VlDcw6iQ3X5WUNzDqJLyFE5S7wAAneP/f/35AADr38okKNEAALzTRgu4pAAA5dRGC7ikAAAO3/AFr3EAAN/jiRDgPSAd+Ns9ZQAAIB295z1lAAAgHf//I8i+GgAALtpJ6uFAAAAj1g76r3EAAL/iZvqTpiAd2NjqsVLvAAC654CpUNzDqJvYgKlQ3MOoh+B65dxzw6h24jaVORrDqNTwoSdIS8OopdwrNDzDw6hA435WUNzDqPDcmtHTKwbNGyWEy+UiBNPlLT3nez/g3jU2XdxsM/rphEKE9v9H0P/STwT05UXP/FKxiOmSwIfmOMJ36g7AheXFwnvSK9Qr1O7SvdSD0vTRjdSUwdTnX8EG6E3BGOikwcTnu02Q/n9LfPnHsc//xUrT92c4g99dO4bkXjw55oE3/d3zI/bJXSoi0mIstNTsIWHHLRfqwTIOPbmYGUHE3AoEtrYHe0niDY9GwAVoSuQPm0W4JHI0DyHFNtIfjjfYJbsz9DWTIpI15SJxNQEjEjZ6IrtGfgyhSGMKKUYgDUtJpwk6u7YOqL5vFSa6mAzGv6AXYuNZB27jGwhy41EIW+PlBo4dAwXTHa0EZR02BeYdlQR+F9wPihfUD3YX4Q+NF9EPyA4uGPsOHhgZDxUYug4yGCIExx38A8cd8QPHHTgEyB0DCLvjVgca45cHV+MgCNbjDxI96sURvemxEZnpOxKJ6qIZzPKWGZfyqRns8pIZiPLSHiL+xx6P/tUeBP7BHtD+J+U19fPkZfXl5HL1RuUY9Zbsouta7L/rcOy066Dsnevu9bvkkvaj5G/2qOSg9cbk2/1wHtv9cB7a/W8e2/1wHubyohml8lEZf/IhGfjyuBkB6hgS/ukQEv/pExIC6hkSxc/nErvPxBLQzwoTrs+ZEvk3hgRnNzEFkTjVA7o2+wV1J2IbaCdrG1wndRuEJ1YbEBbJKmAWoirCFnQqvRXwKmgD5zUCBYQ1wwFNNusGDjWwDmHPjw1Pzs4PcdAmDPnMgx2B2bwcX9jsGzLXbx7Z2vQpBOXbKcjkDipB5b0pgORgNl73eTbj90c21faXNoX4YNCi7u/PDe97z3zv59Ai7gHhSNxP4Rjcn+Hn26Lgg9wy8zbP1/Gxz5X0uM418EbQr/nVNCj79jU++LkzAP1hN3Lppisy6ocs+upxLY/onCrr260gqtwNInDdeCMI2wwfD/RGCRb0XAkW9F4JDPQ9CdT4ag3Z+HEN0/hpDdv4dA0AAP7/AAD+/wAA/v8AAP7/AAD+/wAA/v8AAP7/AAD+/wAA/v8AAP7/AAD+/wAA/v8AAP7/AAD+/wAA/v/b/rEPyv6nD+L+tg/J/qYP2vqR8eP6kPHk+pDx1vqR8Zj1FfWa9RT1mvUU9Zf1FvXS8Tz63PEy+tnxNfrR8Tz60g9n/84Pd//TD2b/zA99/7QNS/mzDUH5tQ1Q+bMNP/m+CXX0tgll9LUJY/TCCXz0UAQ28UAEJ/FFBCvxUQQ38RICeA8LAnYPCwJ2DxUCeA/oB+YM8wfkDOcH5gz3B+MMfQyGCIAMhAiADIQIfAyHCE8PwAJaD7ICWw+xAkoPxgL48M0D+fC5A/nwvwP48M4DNtFgL8qxwRzG7Q1BhfrjwODmKSj26ETVTeDk5JTTzvRZNCnyJ0SG/RK6YfC+OC3g1SQYykYJxsF5tl2cHhD3NdYZsiH5JiYVMzdJCe0nXwTZ1HAvAMLQINPrIUBe+NG+yei/1dDdBeI40afwvj2e9jQ6JOG6JBPK/AL0uJMSzzJdGVMhwyaaFMc6AgSEDe77dxu184wAqRpjDXkrUSn885DX0fUe/AUQ7edSD13hhBPa8SrSwdX8LwTCGSEs7EhA4vfIu5fTGtn426rQDNul4D9BzPicC6fovyE+x2ECSklOG/s4OSG+I69B5gZmLd8FstsDCbsXIiIrCQMsnd958pz0wdkJ8MQb")
}, {
"aabb": AABB(-9.94522e-05, -9.78148e-05, -0.0002, 0.000198904, 0.000197815, 0.00027669),
"attribute_data": PackedByteArray("ERExdwAAlicAADF3ERGWJyIiMXcREZYnERExdyIiliczMzF3IiKWJyIiMXczM5YnREQxdzMzliczMzF3RESWJ1RVMXdERJYnREQxd1RVlidmZjF3VFWWJ1RVMXdmZpYnd3cxd2ZmlidmZjF3d3eWJ4eIMXd3d5Ynd3cxd4eIlieYmTF3h4iWJ4eIMXeZmZYnqaoxd5mZlieYmTF3qaqWJ7u7MXepqpYnqaoxd7u7lifMzDF3u7uWJ7u7MXfMzJYn3d0xd8zMlifMzDF33d2WJ+3uMXfd3ZYn3d0xd+3ulif+/zF37e6WJ+3uMXf+/5Yn7e6WJ///iyXt7osl/v+WJ+3uiyXd3ZYn7e6WJ93diyXMzIsl3d2WJ93diyXMzJYnzMyWJ7u7iyW7u5YnzMyLJamqlie7u4slqaqLJbu7lieZmZYnqaqLJZmZiyWpqpYnmZmLJYeIlieZmZYnh4iLJYeIlid3d4sld3eWJ4eIiyV3d5YnZmaLJWZmlid3d4slVFWWJ2ZmlidVVYslZmaLJURElidUVZYnRESLJVVViyVERIslMzOWJ0REliczM4slIiKWJzMziyUiIoslMzOWJyIilicREYslERGWJyIiiyUAAJYnERGWJwAAiyUREYsl7e4ofP7/MXft7jF3/v8ofN3dKHzt7jF33d0xd+3uKHzd3Sh8zMwxd8zMKHzd3TF3zMwofLu7MXe6uyh8zMwxd6mqKHy7uzF3qaoxd7q7KHypqjF3mZkofKmqKHyYmTF3mZkofIeIMXeHiCh8mJkxd4eIKHx3dzF3d3cofIeIMXdmZih8d3cxd2ZmMXd3dyh8ZmYofFRVMXdUVSh8ZmYxd1RVKHxERDF3REQofFRVMXczMyh8REQxdzMzMXdERCh8IiIofDMzMXciIjF3MzMofCIiKHwRETF3EREofCIiMXcRESh8AAAxdwAAKHwRETF3////f+3uKHzu7v9//v8ofO7u/3/d3Sh83d3/f+3uKHzd3Sh8zMz/f93d/3/MzCh8u7v/f8zMKHy6uyh8zMz/f7u7/3+pqih8qqr/f7q7KHyqqv9/mZkofJmZ/3+pqih8mZkofIiI/3+Zmf9/h4gofIiI/393dyh8d3f/f4eIKHx3d/9/ZmYofGZm/393dyh8ZmYofFVV/39mZv9/VFUofFRVKHxERP9/VVX/f0REKHxERP9/MzMofDMz/39ERCh8MzP/fyIiKHwiIv9/MzMofCIiKHwREf9/IiL/fxERKHwRESh8AAD/fxER/38AACh8VpLiluWCa8aQhQKtyoq33jmzF/wc5LPxxcwX/Bn9a8an7eKWbfoCrTT1t9782N6HAafeh/+/joLim7Px"),
"format": 34896613399,
"index_count": 399,
"index_data": PackedByteArray("AAACAAEAAQADAAAABAAGAAUABQAHAAQACAAKAAkACQALAAgADAAOAA0ADQAPAAwAEAASABEAEQATABAAFAAWABUAFQAXABQAGAAaABkAGQAbABgAHAAeAB0AHQAfABwAIAAiACEAIQAjACAAJAAmACUAJQAnACQAKAAqACkAKQArACgALAAuAC0ALQAvACwAMAAyADEAMQAzADAANAA2ADUANQA3ADQAOAA6ADkAOQA7ADgAPAA+AD0APQA/ADwAQABCAEEAQQBDAEAARABGAEUARQBHAEQASABKAEkASQBLAEgATABOAE0ATQBPAEwAUABSAFEAUQBTAFAAVABWAFUAVQBXAFQAWABaAFkAWQBbAFgAXABeAF0AXQBfAFwAYABiAGEAYwBhAGIAZABmAGUAZwBlAGYAaABqAGkAaQBrAGgAbABuAG0AbQBvAGwAcAByAHEAcQBzAHAAdAB2AHUAdwB1AHYAeAB6AHkAeQB7AHgAfAB+AH0AfQB/AHwAgACCAIEAgQCDAIAAhACGAIUAhQCHAIQAiACKAIkAiQCLAIgAjACOAI0AjQCPAIwAkACSAJEAkQCTAJAAlACWAJUAlQCXAJQAmACaAJkAmQCbAJgAnACeAJ0AnQCfAJwAoACiAKEAoQCjAKAApACmAKUApQCnAKQAqACqAKkAqQCrAKgArACuAK0ArQCvAKwAsACyALEAsQCzALAAtAC2ALUAtQC3ALQAuAC6ALkAuQC7ALgAvAC+AL0AvQC/ALwAwADCAMEAwQDDAMAAxADGAMUAxQDHAMQAyADKAMkAyQDLAMgAzADOAM0AzQDPAMwA0ADSANEA0QDTANAA1ADWANUA1QDXANQA2ADaANkA2QDbANgA3ADeAN0A3QDfANwA4ADiAOEA4QDjAOAA5ADmAOUA5QDnAOQA6ADqAOkA6QDrAOgA7ADuAO0A7QDvAOwA8ADyAPEA8QDzAPAA9AD2APUA9wD5APgA+AD6APcA+gD4APsA9QD6APsA+wD9APwA/ADwAPMA/ADzAP4A/gD0APUA/gD1APsA/gD7APwA"),
"material": SubResource("StandardMaterial3D_t5pyb"),
"name": "Body",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 255,
"vertex_data": PackedByteArray("pkvO9HUZ9/n/f///oP/3+f9///91Gff5pkvO9KD/9/laIC3VdRkL7qZLzvSg/wvupkvO9HUZC+5aIC3VoP8L7pgFk6Z1GYziWiAt1aD/jOJaIC3VdRmM4pgFk6ag/4ziAAAOcXUZ1deYBZOmoP/V15gFk6Z1GdXXAAAOcaD/1deJEOA9dRlezgAADnGg/17OAAAOcXUZXs6JEOA9oP9ezlk04xV1GcTGiRDgPaD/xMaJEOA9dRnExlk04xWg/8TGPWUAAHUZwsFZNOMVoP/CwVk04xV1GcLBPWUAAKD/wsHBmgAAdRn/vz1lAACg//+/PWUAAHUZ/7/BmgAAoP//v6XL4xV1GcLBwZoAAKD/wsHBmgAAdRnCwaXL4xWg/8LBde/gPXUZxMaly+MVoP/ExqXL4xV1GcTGde/gPaD/xMb//w5xdRleznXv4D2g/17Ode/gPXUZXs7//w5xoP9ezmb6k6Z1GdXX//8OcaD/1df//w5xdRnV12b6k6ag/9XXpN8t1XUZjOJm+pOmoP+M4mb6k6Z1GYzipN8t1aD/jOJYtM70dRkL7qTfLdWg/wvupN8t1XUZC+5YtM70oP8L7v9///91Gff5WLTO9KD/9/lYtM70dRn3+f9///+g//f5WLTO9KD/d/f/f/b1//9390mwpOv//3f3/3///6D/d/dJsKTr//9n5qTfLdWg/2fmWLTO9KD/Z+Y62HfO//9n5unweaP//1jVpN8t1aD/WNU62HfO//9Y1Wb6k6ag/1jVZvqTpqD/SsQT9hpy//9KxP//DnGg/0rE6fB5o///SsR17+A9oP88sxP2GnL//zyz0ebkQv//PLP//w5xoP88s6XL4xWg/zGi0ebkQv//MaLIxQAe//8xonXv4D2g/zGiyMUAHv//MpHBmgAAoP8ykaXL4xWg/zKRrpjPCf//MpHBmgAAoP8mglBnzwn//yaCPWUAAKD/JoKumM8J//8mgj1lAACg/zKRNjoAHv//MpFZNOMVoP8ykVBnzwn//zKRiRDgPaD/MaJZNOMVoP8xoi0Z5EL//zGiNjoAHv//MaIAAA5xoP88s4kQ4D2g/zyz7Akacv//PLMtGeRC//88s+wJGnL//0nEmAWTpqD/ScQAAA5xoP9JxBUPeaP//0rEWiAt1aD/WNUVD3mj//9Y1cQnd87//1jVmAWTpqD/WNVaIC3VoP9n5rVPpOv//2fmpkvO9KD/Z+bEJ3fO//9n5v9///+g/3f3pkvO9KD/d/f/f/b1//9397VPpOv//3f3KLBZ6xkLh/v/f///dRmH+1i0zvR1GYf7/3+k9RkLh/v910DOGQu88li0zvR1GbzypN8t1XUZvPIosFnrGQu88v3XQM4ZC2HqZvqTpnUZYeqc8GCjGQth6qTfLdV1GWHqnPBgoxkLyeL//w5xdRnJ4sH1I3IZC8niZvqTpnUZyeKK5g1DGQtN3P//DnF1GU3cde/gPXUZTdzB9SNyGQtN3HXv4D11GUvXmMVDHhkLS9eK5g1DGQtL16XL4xV1GUvXmMVDHhkLHdTBmgAAdRkd1J2YIAoZCx3UpcvjFXUZHdSdmCAKGQsG0z1lAAB1GQbTYWcgChkLBtPBmgAAdRkG02Y6Qx4ZCx3UPWUAAHUZHdRZNOMVdRkd1GFnIAoZCx3UZjpDHhkLS9eJEOA9dRlL13QZDUMZC0vXWTTjFXUZS9d0GQ1DGQtN3AAADnF1GU3cPQojchkLTdyJEOA9dRlN3GIPYKMZC8niAAAOcXUZyeKYBZOmdRnJ4j0KI3IZC8niAShAzhkLYeqYBZOmdRlh6logLdV1GWHqYg9goxkLYeoBKEDOGQu88qZLzvR1Gbzy1k9Z6xkLvPJaIC3VdRm88tZPWesZC4f7/3///3UZh/v/f6T1GQuH+6ZLzvR1GYf7/3///wAAfvgosFnrGQt++Fi0zvQAAH74/3+k9RkLfvhYtM70AACS6f3XQM4ZC5LppN8t1QAAkukosFnrGQuS6f3XQM4ZC+faZvqTpgAA59qk3y3VAADn2pzwYKMZC+fa//8OcQAAvMyc8GCjGQu8zMH1I3IZC7zMZvqTpgAAvMz//w5xAACBv4rmDUMZC4G/de/gPQAAgb/B9SNyGQuBv3Xv4D0AAPyzmMVDHhkL/LOly+MVAAD8s4rmDUMZC/yzmMVDHhkLn6vBmgAAAACfq6XL4xUAAJ+rnZggChkLn6vBmgAAAAByqGFnIAoZC3KoPWUAAAAAcqidmCAKGQtyqD1lAAAAAJ+rZjpDHhkLn6tZNOMVAACfq2FnIAoZC5+rZjpDHhkL/LOJEOA9AAD8s1k04xUAAPyzdBkNQxkL/LN0GQ1DGQuBvwAADnEAAIG/iRDgPQAAgb89CiNyGQuBvwAADnEAALzMYg9goxkLvMyYBZOmAAC8zD0KI3IZC7zMmAWTpgAA59oBKEDOGQvn2logLdUAAOfaYg9goxkL59oBKEDOGQuS6aZLzvQAAJLpWiAt1QAAkunWT1nrGQuS6dZPWesZC374/3///wAAfvimS870AAB++P9/pPUZC374WiAt1QAAAAAAAA5xAAAAAJgFk6YAAAAAiRDgPQAAAAA9ZQAAAAAAAKXL4xUAAAAAwZoAAAAAAAD//w5xAAAAAKTfLdUAAAAAZvqTpgAAAAB17+A9AAAAAFi0zvQAAAAApkvO9AAAAAD/f///AAAAAFk04xUAAAAAm3nNvJt5zbybec28m3nNvBxuDbccbg23HG4NtxxuDbdTY6mxU2OpsVNjqbFTY6mxQ1ghrENYIaxDWCGsQ1ghrNFL6KXRS+il0UvopdFL6KVKPCSeSjwknko8JJ5KPCSeLiYWky4mFpMuJhaTLiYWkwAA/38AAP9/AAD/fwAA/38XE9BZFxPQWRcT0FkXE9BZJR61QyUetUMlHrVDJR61Q+glLTToJS006CUtNOglLTQhLLwnISy8JyEsvCchLLwnqTGsHKkxrBypMawcqTGsHA434xEON+MRDjfjEQ434xHNPGQGzTxkBs08ZAbNPGQGSANYAEgDWABIA1gASANYAEMDDwFDAw8BQwMPAUMDDwE+A98BPgPfAT4D3wE+A98BNwPlAjcD5QI3A+UCNwPlAi4DYAQuA2AELgNgBC4DYAQcA/0GHAP9BhwD/QYcA/0G7wLRDe8C0Q3vAtEN7wLRDQAA/38AAP9/AAD/fwAA/38tcu+CLXLvgi1y74Itcu+CAXkcgwF5HIMBeRyDAXkcg557LYOeey2Dnnstg557LYMZfTeDGX03gxl9N4MZfTeDH34+gx9+PoMffj6DH34+g+9+Q4PvfkOD735Dg+9+Q4Onf0iDp39Ig6d/SIOnf0iDYUrRB2FK0QdhStEHYUrRB/RBbhX0QW4V9EFuFfRBbhVdOrIhXTqyIV06siFdOrIh3zLNLd8yzS3fMs0t3zLNLccq4TrHKuE6xyrhOscq4TolIXFKJSFxSiUhcUolIXFKQBRGX0AURl9AFEZfQBRGXwAA/38AAP9/AAD/fwAA/3+4ID+UuCA/lLggP5S4ID+UjTUkoY01JKGNNSShjTUkoR5FxqoeRcaqHkXGqh5FxqoxUt6yMVLesjFS3rIxUt6yTV5cuk1eXLpNXly6TV5cupFq9MGRavTBkWr0wZFq9MEueGHKLnhhyi54YcoueGHKXiuOBF4rjgReK44EXiuOBFwoHQ1cKB0NXCgdDVwoHQ1jJZUVYyWVFWMllRVjJZUVKSLCHikiwh4pIsIeKSLCHk8euClPHrgpTx64KU8euCkiGXQ4Ihl0OCIZdDgiGXQ48xC/T/MQv0/zEL9P8xC/TwAA/38AAP9/AAD/fwAA/38/MPOQPzDzkD8w85A/MPOQikcimYpHIpmKRyKZikcimUZWT55GVk+eRlZPnkZWT548YSmiPGEpojxhKaI8YSmiaWpipWlqYqVpamKlaWpipeJyXKjiclyo4nJcqOJyXKhwe12rcHtdq3B7Xatwe12r////f/7//3/+//9//v//f////3////9/////f/7//3/+//9/////f////3////9/////f////3////9/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_5pbfp")

[node name="projectile" type="Area3D"]
top_level = true
script = ExtResource("1_ch0mv")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("SphereMesh_iw42c")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1.155, 0, 0, 0, 1.155, 0, 0, 0, 1.155, 0, 0, 0)
shape = SubResource("SphereShape3D_us5y8")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Root Scene" type="Node3D" parent="."]
transform = Transform3D(1.90013e-06, -9.50067e-07, -21.735, 21.735, 9.50067e-07, 1.90013e-06, 9.50067e-07, -21.735, 9.50067e-07, 0, 0, 0)

[node name="RootNode" type="Node3D" parent="Root Scene"]

[node name="Cylinder" type="MeshInstance3D" parent="Root Scene/RootNode"]
transform = Transform3D(100, 0, 0, 0, -1.19209e-05, 100, 0, -100, -1.19209e-05, 0, 0, 0)
mesh = SubResource("ArrayMesh_avaax")
skeleton = NodePath("")

[node name="HFlowContainer" type="HFlowContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="Button" type="Button" parent="HFlowContainer"]
layout_mode = 2
text = "Ground
"

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="HFlowContainer/Button" to="." method="_on_button_pressed"]
